--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div id="home" class="hero section section1">
       <div class="hero-img">
         <div class="image">
-          <img src="/public/image.jpg" alt="image">
+          <img src="public\image.jpg" alt="image">
         </div>
 
       </div>
