--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 </div>
                 <div class="row">
                   <div class="button padding">
-                    <a href="/public/resume.pdf" download class="btn">Resume <i
+                    <a href="public/resume.pdf" download class="btn">Resume <i
                         class="fa-solid fa-file-arrow-down"></i></a>
                     <a href="#contact" class="btn">Hire Me</a>
                   </div>
@@ -222,7 +222,7 @@
         <div class="project-item padding">
           <div class="works-in shadow-dark">
             <div class="works-img">
-              <img src="/public/amazon-clone.jpg">
+              <img src="public/amazon-clone.jpg">
 
             </div>
           </div>
@@ -231,7 +231,7 @@
         <div class="project-item padding">
           <div class="works-in shadow-dark">
             <div class="works-img">
-              <img src="/public/calc.jpg" alt="">
+              <img src="public/calc.jpg" alt="">
 
             </div>
           </div>
@@ -240,7 +240,7 @@
         <div class="project-item padding">
           <div class="works-in shadow-dark">
             <div class="works-img">
-              <img src="/public/lib-management.jpg" alt="">
+              <img src="public/lib-management.jpg" alt="">
 
             </div>
           </div>
@@ -249,7 +249,7 @@
         <div class="project-item padding">
           <div class="works-in shadow-dark">
             <div class="works-img">
-              <img src="/public/laptop.jpg" alt="">
+              <img src="public/laptop.jpg" alt="">
 
             </div>
           </div>
@@ -258,7 +258,7 @@
         <div class="project-item padding">
           <div class="works-in shadow-dark">
             <div class="works-img">
-              <img src="/public/ticket-booking.jpg" alt="">
+              <img src="public/ticket-booking.jpg" alt="">
 
             </div>
           </div>
@@ -267,7 +267,7 @@
         <div class="project-item padding">
           <div class="works-in shadow-dark">
             <div class="works-img">
-              <img src="/public/laptop.jpg" alt="">
+              <img src="public/laptop.jpg" alt="">
             </div>
           </div>
         </div>
@@ -298,7 +298,7 @@
             <a href="https://www.instagram.com/arijit_mondal.10?igsh=ZnRucHZtaGp6cmtz"><i class="fa-brands fa-instagram"></i></a>
             <a href="https://www.linkedin.com/in/arijit-m-042053301?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fa-brands fa-linkedin"></i></a>
           </div>
-          <a href="/public/resume.pdf" download class="btn btn2 padding-button"> <i
+          <a href="public/resume.pdf" download class="btn btn2 padding-button"> <i
               class="fa-solid fa-file-arrow-down"></i>Download Resume </a>
         </div>
         <div class="contact-right">
