--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         <div class="project-item padding">
           <div class="works-in shadow-dark">
             <div class="works-img">
-              <img src="public/laptop.jpg" alt="">
+              <img src="public/tic-tac-toe.png" alt="">
             </div>
           </div>
         </div>
