--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
         <div class="contact-left ">
           <h1 class="sub-title">To Connect </h1>
           <p><i class="fa-solid fa-paper-plane"></i> arijitmondalam10@gmail.com</p>
-          <p><i class="fa-solid fa-phone"></i>87237362476</p>
+          <p><i class="fa-solid fa-phone"></i href="tel:9883343764">9883343764</p>
           <div class="social-icons">
             
             <a href="https://github.com/arijitmondal10"><i class="fa-brands fa-github"></i></a>
